fix navigation bg, text alignment

--- a/src/LandingPage.scss
+++ b/src/LandingPage.scss
@@ -31,11 +31,8 @@ body {
 	justify-content: space-between;
 	box-shadow: 0px 4px 7px 0px rgba(214, 214, 214, 1);
 	background: rgb(244, 239, 239);
-	background: linear-gradient(
-		0deg,
-		rgb(248, 245, 245) 0%,
-		rgba(255, 255, 255, 1) 50%
-	);
+	background: transparent linear-gradient(180deg, #ffffff 0%, #ffffffcf 100%) 0%
+		0% no-repeat padding-box;
 
 	.logoNavBox {
 		width: 25%;
@@ -60,7 +57,6 @@ body {
 	}
 
 	li {
-		//float: right;
 		padding: 7px 25px 7px;
 		font-size: 14px;
 	}
@@ -123,14 +119,19 @@ body {
 		h2 {
 			width: 100%;
 			float: right;
-			font-size: 60px;
+			font-size: 64px;
 			color: #92623c;
 		}
 
 		p {
 			width: 100%;
 			float: right;
-			padding-left: 13px;
+			font-size: 16px;
+			letter-spacing: 1.12px;
+			margin-top: -0.5rem;
+		}
+		.ios {
+			margin-left: 1rem;
 		}
 	}
 
